文字の色変更

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
     
     h1 {font-size:100px;font-weight:lighter;}
-    p{color:red;background-color:lightblue;}
+    p{color:blue;background-color:lightblue;}
     a{border:1px solid blueviolet;}
     
   </style>
